# luau-analyze

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/lan/: Cargo.toml
crates/lan/src/: main.rs
crates/lan/tests/: cli.rs
crates/luau-analyze/: Cargo.toml  LICENSE  build.rs
crates/luau-analyze/shim/: analyze_shim.cpp
crates/luau-analyze/src/: ffi.rs  lib.rs
crates/luau-analyze/tests/: integration.rs
docs/: compatibility.md  luau-update-playbook.md  release-checklist.md
examples/: README.md
plans/: cleanup.md  next.md  proj.md  tweaks.md
scripts/: bench-latency.sh
xtask/: Cargo.toml
xtask/src/: main.rs
