[package]
name = "lan"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "CLI demo for the luau-analyze crate"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
luau-analyze = { path = "../luau-analyze" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
